实体类模板生成